<resources>
    <string name="app_name">Vision</string>
    <string name="select_image_for_text_recognition">Select image for text recognition</string>
    <string name="find_text_button">Find text</string>
    <string name="find_face_contour_button">Find face contour</string>
    <string name="find_text_cloud_button">Find text (cloud)</string>
    <string name="find_objects_button">Find objects</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>
