<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="310dp"
        android:layout_height="555dp"
        android:scaleType="fitStart"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/select_image_for_text_recognition" />

    <com.google.firebase.codelab.mlkit.GraphicOverlay
        android:id="@+id/graphic_overlay"
        android:layout_width="310dp"
        android:layout_height="555dp"
        android:layout_alignParentStart="true"
        app:layout_constraintBottom_toBottomOf="@id/image_view"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="@id/image_view"
        app:layout_constraintRight_toRightOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view"
        app:layout_constraintVertical_bias="0.602" />

    <Button
        android:id="@+id/button_text"
        android:layout_width="119dp"
        android:layout_height="70dp"
        android:text="@string/find_text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_face"
        android:layout_width="128dp"
        android:layout_height="70dp"
        android:text="@string/find_face_contour_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toRightOf="@id/button_text"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_run_custom_model"
        android:layout_width="119dp"
        android:layout_height="70dp"
        android:text="@string/find_objects_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/graphic_overlay"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="@+id/graphic_overlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

</android.support.constraint.ConstraintLayout>